loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: '(' expected but identifier found.
for stepper<-1 to 8 {left(); forward(); right()} 
    ^LoopStairs:5: error: illegal start of simple expression
	}
        ^